# docker_nas

./: docker-compose.yml  dockerfile  entrypoint.sh  makefile  pyproject.toml  readme.md
src/nas/: web_service.py
